css/main.css
body, html {
    margin-top: 15px;
}

.vcenter {
    display: inline-block;
    vertical-align: middle;
    float: none;
}

h2.heading {
    font-family: 'brandon-grotesque', sans-serif;
    color: #fff;
    margin-bottom: -20px;
    display: inline-block;
    text-transform: uppercase;
    font-size: 18px;
    background-color: rgba(0,0,0,.8);
    padding: 15px;
}

section {
    margin-bottom: 40px;
}


/**
 * banner stuff
 */

.banner-img {
    height: 300px;
    background: 0 30%;
    overflow: hidden;
}

.banner-img h2, .banner-img .sub-title {
    background-color: rgba(0,0,0,.7);
    padding: 15px;
    display: inline-block;
    text-transform: uppercase;
    position: absolute;
    overflow: hidden;
}

.banner-img h2 {
    font-family: 'brandon-grotesque', sans-serif;
    font-size: 30px;
    color: #fff;
    bottom: 60px;
    left: 35px;
}

.banner-img .sub-title {
    font-family: sans-serif;
    font-size: 14px;
    color: rgba(255,255,255,.6);
    bottom: 15px;
    left: 35px;
}

